# LinDroid

./: .gitignore  ABC.md  Daily.md  build.gradle  controller.gradle  module 4.md  settings.gradle
lindroidcode/: CMakeLists.txt  build.gradle
lindroidcode/src/main/: AndroidManifest.xml
lindroidcode/src/main/jni/: com_example_lindroidcode_nativerelated_LinNative.cpp  com_example_lindroidcode_nativerelated_LinNative.h
lindroidcode/src/main/jni/reflex/: JDCNReflexJava.cpp  JDCNReflexJava.h
lindroidcode/src/main/res/anim/: anim_alpha.xml  anim_rotate.xml  anim_scale.xml
lindroidcode/src/main/res/drawable/: bg_round_corner_rect.xml  bg_round_corner_rect_b.xml  bg_round_corner_rect_c.xml  launch_screen.xml  seek_progress.xml  selector_text_full_width.xml  shape_gradient_case_1.xml
lindroidcode/src/main/res/layout/: activity_a.xml  activity_aes.xml  activity_anim.xml  activity_apply_permission.xml  activity_audio_manager.xml  activity_audio_record_play.xml  activity_b.xml  activity_bundle_knowledge.xml  activity_camera_overview.xml  activity_canvas.xml  activity_circle_image_view.xml  activity_circle_progress.xml  activity_constraint.xml  activity_constraint_alpha.xml  activity_constraint_attribute.xml  activity_data_structure_algorithm.xml  activity_device_info.xml  activity_display_cutout.xml  activity_edit_text_demo.xml  activity_encrypt_decrypt.xml  activity_external.xml  activity_full_screen_camera.xml  activity_github_profile.xml  activity_gradle_sample.xml  activity_greendao_a_to_z.xml  activity_guava_filter.xml  activity_guava_over_all.xml  activity_main.xml  (+42 more)
(+223 files in other folders)
